# tracker

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
api/: .env  Cargo.toml  Dockerfile  schema.sql  up
api/client/: README.md  package.json
api/migrator/: Cargo.toml  Dockerfile
api/migrator/sql/: 02-CreateDietTables.sql  04-AddMoreMacros.sql
api/seeder/: Cargo.toml
api/seeder/sql/: 01-SeedIngredientsTable.sql  02-SeedMealsTable.sql
api/seeder/src/: main.rs
api/server/: Cargo.toml
api/server/src/: error.rs  lib.rs  main.rs
api/server/src/meals/: basket_optimizer.rs  mod.rs  models.rs  routes.rs
api/server/src/storage/: mod.rs  postgres.rs
api/server/src/trends/: dtos.rs  mod.rs  models.rs  routes.rs
api/src/: db.rs  errors.rs  lib.rs  main.rs  models.rs
api/src/summaries/: mod.rs  models.rs  routes.rs
api/src/trends/: dtos.rs  mod.rs  routes.rs
api/src/workouts/: mod.rs  models.rs  routes.rs
api2/: Cargo.toml
api2/migrator/sql/: 01-CreateIngredientsTable.sql
api2/seeder/: Dockerfile
api2/seeder/src/: main.rs
api2/server/: Cargo.toml  Dockerfile
api2/server/src/: main.rs
api2/server/src/trends/: models.rs
cli/: Cargo.toml
cli/src/: main.rs
client/: README.md  package-lock.json  package.json
domain/: Cargo.toml
domain/src/: error.rs  lib.rs
domain/src/meals/: mod.rs  models.rs
domain/src/storage/: postgres.rs
domain/src/trends/: mod.rs  models.rs
infra/: ingress.yaml  skaffold.yaml
infra/api/: deployment.yaml  service.yaml
infra/db/: cockroach-cluster.yaml  cockroach-definition.yaml  cockroach-operator.yaml
infra/migrator/: job.yaml
infra/seeder/: job.yaml
migrator/: Dockerfile
migrator/sql/: 03-UpdateFloatsToDouble.sql
mobile/: pubspec.yaml
mobile/android/app/src/main/: AndroidManifest.xml
mobile/lib/: main.dart
seeder/: Dockerfile
seeder/sql/: 01-SeedIngredientsTable.sql
seeder/src/: main.rs
server/: Cargo.toml  Dockerfile
server/src/: lib.rs  main.rs
server/src/meals/: routes.rs
server/src/trends/: routes.rs
ui/: README.md  pubspec.yaml
ui/lib/: client.dart  create_workout_page.dart  dtos.dart  dtos.g.dart  main.dart  models.dart  models.g.dart  sqlite.dart  state.dart  storage.dart
ui/lib/atoms/: clock.dart  day_display.dart  day_input.dart  double_input.dart  header.dart  ingredient.dart  integer_input.dart  loader.dart  scatter_plot.dart  square_icon_button.dart  themed_icon.dart  time_display.dart  time_input.dart
ui/lib/data/: daily_workout_summary.dart  daily_workout_summary.g.dart
ui/lib/dtos/: trend.dart  trend.g.dart
ui/lib/forms/: exercise.dart  workout.dart
ui/lib/models/: exercise.dart  meal.dart  trend.dart  workout.dart
ui/lib/molecules/: amount_form.dart  bottom_nav.dart  datetime_input.dart  exercise_input.dart  exercise_list.dart  exercise_selector.dart  ingredient_input.dart  ingredient_list.dart  ingredient_selector.dart  meal_input.dart  meal_list.dart  screen.dart  workout_input.dart
ui/lib/neu/: basic.dart  bottom_nav.dart  diet.dart  exercise.dart  settings.dart  sleep.dart  trends.dart
ui/lib/neu/add/: add_diet.dart  add_exercise.dart  add_sleep.dart  feature_request.dart
ui/lib/neu/atoms/: line_chart.dart  scatter_plot.dart  themed_icon.dart  timeseries.dart
ui/lib/neu/dtos/: trend.dart
ui/lib/neu/models/: trend.dart
ui/lib/providers/: workout_form.dart
ui/lib/screens/: add_exercise.dart  add_meal.dart  add_workout.dart  create_exercise.dart  create_workout.dart  diet.dart  exercise.dart  feature_request.dart  home.dart  settings.dart  sleep.dart  trends.dart
ui/lib/screens/add/: add_diet.dart  add_exercise.dart  add_sleep.dart  feature_request.dart
ui/lib/utils/: date_builder.dart
