[package]
name = "api"
version = "0.1.0"
authors = ["Taylor Ninesling <taylor@walrus.ai>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.5"
actix-web = "3"
chrono = { version = "0.4", features = ["serde"]}
env_logger = "0.9"
log = "0.4"
r2d2 = "0.8"
r2d2_sqlite = "0.19"
rusqlite = { version = "0.26", features = ["chrono", "uuid"]}
serde = "1"
serde_json = "1"
uuid = { version = "0.8", features = ["serde", "v4"] }
