[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
chrono = "0.4.19"
fuzzydate = "0.1"

[dependencies.clap]
version = "4.0"
features = [ "derive" ]

[dependencies.domain]
path = "../domain"

[dependencies.sqlx]
version = "0.5.10"
features = [ "postgres", "runtime-tokio-rustls", "chrono", "uuid" ]

[dependencies.tokio]
version = "1.15"
features = [ "full" ]