[package]
name = "domain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.52"
dropshot = "0.8.0"
serde_json = "1.0.74"
slog = "2.7.0"
typed-builder = "0.9.1"

[dependencies.chrono]
version = "0.4.19"
features = [ "serde" ]

[dependencies.hyper]
version = "0.14"
features = [ "full" ]

[dependencies.schemars]
version = "0.8.8"
features = [ "chrono", "uuid" ]

[dependencies.serde]
version = "1.0.133"
features = [ "derive" ]

[dependencies.sqlx]
version = "0.5.10"
features = [ "postgres", "runtime-tokio-rustls", "chrono", "uuid" ]

[dependencies.tokio]
version = "1.15"
features = [ "full" ]

[dependencies.uuid]
version = "0.8.2"
features = [ "serde" ]